Fix invisible backend collapsed backend menu button on narrow screens

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -45,6 +45,12 @@ h4, .h4, .tabContainer > ul {
     color: lighten($darkFontColor, 30%);
     background-color: transparent;
   }
+  .navbar-toggle {
+    border-color: lighten($darkFontColor, 30%);
+    .icon-bar {
+      background-color: lighten($darkFontColor, 30%);
+    }
+  }
   .navbar-nav>li>a:hover, .navbar-nav>li.active>a, .dropdown-menu>.active>a {
     color: inherit;
     background-color: #eee;
